--- a/app/src/main/res/layout/update_student_layout.xml
+++ b/app/src/main/res/layout/update_student_layout.xml
@@ -60,7 +60,8 @@
         android:layout_marginTop="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/gender_title1">
+        app:layout_constraintTop_toBottomOf="@+id/gender_title1"
+        android:checkedButton="@id/male_radio_button">
 
         <RadioButton
             android:id="@+id/male_radio_button1"
@@ -123,16 +124,30 @@
         android:textColor="@color/white"
         />
 
+    <TextView
+        android:id="@+id/required1"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:gravity="center"
+        android:text="Check Empty Fields"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/grade_value1" />
+
     <Button
         android:id="@+id/save_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
+        android:onClick="updateStudent"
         android:text="Save Changes"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/grade_value1"
-        android:onClick="updateStudent"/>
+        app:layout_constraintTop_toBottomOf="@+id/required1" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
